clusters/production/monitoring/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - grafana.rees.ca
  rules:
  - backendRefs:
    - name: monitoring-kube-prometheus-stack-grafana
      port: 80
